css/style.css
/* GLOBAL */

body {
    font-family: "Poppins", sans-serif;
    margin:0;
    padding: 0;
}

section {
    padding-top: 40px;
    padding-bottom: 40px;
}

/* DEB FORMATAGE */

:root{
    --color-sun:rgb(231, 231, 10);
    --color-eco:#019c5a;
    --color-blanc:#ffffff;
    --color-noir:black;
    --color-gris: rgba(191,193,196,255);
    --color-grisclair: #f4f6f5ed;
    --color-grisfonce: #7a8086;
    --color-grisfooter: #d0dadc;
    --color-dark: #053b45;
    --color-footer: #032328;
    --fs-me : 40px;
    --fs-sm : 15px;
    --fs-vsm : 11px;
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}

.flex-right {
    display: flex;
    justify-content: end;
}

.font-italic {
    font-style: italic;
}

.text-white {
    color: var(--color-blanc);
}

.title-eco {
   color: var(--color-eco);
   font-size: var(--fs-me);
}

.title-sun {
    color: var(--color-sun);
    font-size: var(--fs-me);
 }

.color-sun{
    color: var(--color-sun);
}

.bg-dark {
    background: var(--color-dark);
}

/* FIN FORMATAGE */

/* DEB MARGES */

.pl-20 {
    padding-left: 20px;
}
.pr-20 {
    padding-right: 20px;
}

.mr-20 {
    margin-right: 20px;
}
.mb-50 {
    margin-bottom: 50px !important;
}

.mb-45 {
    margin-bottom: 45px !important;
}

.mb-30 {
    margin-bottom: 30px !important;
}

.mt-25 {
    margin-top: 25px !important;
}

.mt-45 {
    margin-top: 45px !important;
}

.mt-20 {
    margin-top: 20px !important;
}

.mt-30 {
    margin-top: 30px !important;
}

/* FIN MARGES */

/* DEB FLEXBOX */

.container {
    max-width: 1200px !important;
    margin: 0 auto;
}

.row {
    display: flex !important;
    flex-wrap: wrap!important;
}

.col-100 {
    width: 100%;
}

.col-50 {
    width: 50%;
}

.col-33 {
    width: 33.33%;
}

.col-25 {
    width: 25%;
}

.col-20 {
    width: 20%;
}

/* FIN FLEXBOX */


/* DEB BARRE DE NAVIGATION */

nav {
    background: var(--color-blanc);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    font-size: 25px;
    position: sticky;
    height: 50px;
    top: 0;
}

.logo {
    font-size: 25px;
    margin-left: 30px;
    color: var(--color-eco); 
} 

.menu {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    width: 41%;
}

.menu li {
    margin-right: 25px; 
}

.menu li:last-child {
    margin-right: 0; 
}

.menu li a {
    text-decoration: none;
    color: var(--color-noir);
    font-weight: bold;
    font-size: 15px;
}

#icons {
    cursor: pointer;
    display: none;
}

/* FIN BARRE DE NAVIGATION */

/* DEB BANNER */
.banner {
    padding-bottom: 40px;
}

.banner img {
    width: 100%;
}
.banner h1 {
    color: var(--color-blanc);
    text-align: end;
    margin-top: -200px;
    font-size: 35px
}
.banner h1 span {
    font-size: 45px;
}

/* FIN BANNER */

/* DEB TEAM */

.team-img{
    border-radius: 50%;
    width: 250px;
    height: 250px;
    object-fit: cover;
}

.detail-team {
    color: var(--color-grisfonce);
    font-size: var(--fs-sm);
    text-align: center;
 }

/* FIN TEAM */

/* DEB TEMOIGNAGE */

.temoin {
    background: var(--color-dark);
}

.temoin h2 {
    color:var(--color-sun);
    font-size:var(--fs-me);
}

.temoin h3 {
    color: var(--color-blanc);
}

/* FIN TEMOIGNAGE */

/* DEB SERVICES */

.box {
    border-radius: 5%;
    background-color: var(--color-grisclair);
    justify-content: center;
    align-items: center;
    width: 300px;
    height: 300px;
    margin: auto;
}

.box img{
    margin-top: 70px;
}

/* FIN SERVICES */

/* DEB CONTACT */

.form-control{
    width: 100%;
    background-color: transparent;
    border: none;
    border-bottom: 3px solid var(--color-blanc) !important;
}

.form-control:focus {
    color: var(--color-blanc); 
    outline: none; /* Supprime la bordure par défaut du focus */
}

.my-btn {
    background-color: var(--color-sun); /* Couleur de fond */
    border: none; /* Pas de bordure */
    color: var(--color-dark); /* Couleur du texte */
    text-align: center; /* Alignement du texte */
    text-decoration: none; /* Pas de soulignement */
    display: inline-block; /* Affichage en ligne */
    border-radius: 40px;
    padding: 20px 60px 20px 60px;
    font-weight: bold;
  }
  
.my-btn:hover {
    background: linear-gradient(#728464, #87adba);
    text-decoration: none;
}

.cadre-img1 {
    border-radius: 3%; 
    overflow: hidden; /* Masquer le contenu qui dépasse du cadre */
    margin-right: 20px;
}

.cadre-img1 img {
    width: 100%; /* Largeur de l'image à 100% du cadre */
    height: 100%; /* Hauteur de l'image à 100% du cadre */
    object-fit: cover; 
}

.cadre-img2 {
    border-radius: 3%; 
    border: 1px solid #000; 
    padding: 20px; /* Espacement interne du contenu */
    margin-right: 30px;
    height: calc(100% - 40px);
    align-items: center;
    justify-content: center;
    display: flex;
    align-content: center;
  }
 
.cadre-img2 p {
    color: var(--color-grisfonce);
    font-size: smaller;
}
.cadres-cercle {
    display: flex;
    justify-content: center;
    margin-top: 20px;
}

.cadres-cercle p {
    color: var(--color-noir);
    font-size: small;
    font-weight: bold;
}

.cadres-cercle p::first-letter {
    text-transform: uppercase;
}

.cadre-cercle {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    border: 5px solid var(--color-noir);
    margin: 0px auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.cadre-cercle img {
    max-width: 40%; /* Largeur de l'image à 100% du cadre */
    height: auto;
}

.cadre-titre {
    margin-top: 6px;
}

/* FIN CONTACT */

/* DEB GALERIE */

.pagination {
    display: flex;
    justify-content: space-between; 
    margin: auto;
  }

.btn-cercle {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    border: 1px solid var(--color-noir);
    font-size: 1.5rem;
    margin: 0px 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--color-blanc); /* Couleur de fond par défaut */
    color: var(--color-noir);
    transition: background-color 0.3s; /* Transition pour une animation fluide */
}

.btn-cercle:hover {
    background-color: var(--color-noir); /* Nouvelle couleur de fond au survol */
    color: var(--color-sun);
}

.galerie-titre {
    font-size: x-large;
    font-weight: bold;
}

/* FIN GALERIE */

/* DEB FOOTER INFOS */

footer {
    color: var(--color-blanc);
}

 .fa.fa-phone {
    transform: scale(1.5);  /* Taille de l'icône */
 }

 .fa.fa-map-marker {
    transform: scale(1.5);
 }

 .conteneur-flex {
    display: flex;
    gap: 20px; /* Espacement entre les éléments */
  }
  
/* FIN FOOTER INFOS */


/* DEB FOOTER COPYRIGHT */

.bg-copyright {
    background: var(--color-footer);
}

.color-copyright {
    color: var(--color-blanc);
    font-size: var(--fs-vsm);
    color:var(--color-grisfooter);
}

.rowfooter {
    display: flex;
    justify-content: space-between; 
    align-items: center;
    margin: auto;
  }

.menufooter {
    list-style-type: none;
    margin: 0px auto;
    padding: 0;
    display: flex;
    flex-direction: column;
    /* flex-wrap: wrap; */
    justify-content: center;
}

.menufooter li,a {
    color: var(--color-blanc);
    font-size: var(--fs-vsm);
    color: var(--color-grisfooter);
}

.cadre-reseau {
    width: 25px;
    height: 25px;
    border-radius: 20%;
    border: 1px solid var(--color-blanc);
    display: flex;
    justify-content: center;
    align-items: center;
}
/* FIN FOOTER COPYRIGHT */

/* DEB RESPONSIVE */

@media (max-width: 968px) {
    .col-md-100{
        width: 100%;
    }
}

@media (max-width: 650px) {

    /* menu responsive */

    #icons {
        display: block;
    }

    #icons:before {
        content: "\2630";
    }

    nav ul {
        position: fixed;
        left: -110%;
        top: 5%;
        flex-direction: column;
        background: greenyellow;
        width: 100%;
        text-align: center;
        transition: 0.25s;
    }

    .active #icons:before {
        content: "\2715";
    }

    nav li {
        padding: 3px 0;
    }

    nav li:hover {
        background: rgb(157, 217, 240);
    }

    nav.active ul {
        left: 0;
    }

}

  /* FIN RESPONSIVE */

